fix button issue on safari

--- a/src/components/common/Button/Button.module.css
+++ b/src/components/common/Button/Button.module.css
@@ -9,7 +9,7 @@
 
 .contained,
 .containedInverted {
-	padding: 0.5rem 1rem;
+	padding: 0.6rem 1.2rem;
 	background-color: var(--color-gray-800);
 	font-size: var(--font-size-s);
 	color: var(--color-gray-100);
@@ -34,7 +34,7 @@
 
 .text {
 	position: relative;
-	padding: 0.5rem 1rem;
+	padding: 0.6rem 1.2rem;
 	background: none;
 	color: var(--color-gray-800);
 	font-weight: var(--font-weight-medium);
